<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_coler"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/klinebg"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="￥0"
                android:textColor="@color/cpb_red" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/ico_up2_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region"
                        android:textColor="@color/cpb_red" />

                    <TextView
                        android:id="@+id/rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="+0%"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vol"
                        android:textColor="@color/cpb_red" />

                    <TextView
                        android:id="@+id/vol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:paddingLeft="5dp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high"
                        android:textColor="@color/cpb_red" />

                    <TextView
                        android:id="@+id/hight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+0%"
                        android:paddingLeft="5dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low"
                        android:textColor="@color/cpb_red" />

                    <TextView
                        android:id="@+id/low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:paddingLeft="5dp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:padding="10dp"
                android:id="@+id/changeScreen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/swift_screen_b"
                android:scaleType="center"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <zhangliang.view.android.klibrary.view.KView
            android:id="@+id/my_charts_view"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="400dp"
           />
<!--        <zhangliang.view.android.klibrary.view.DrawView
            android:layout_width="match_parent"
            android:layout_height="400dp" />-->
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/klinebg"
            android:fadingEdge="none"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/title_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/spinerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/klinebg"
            android:drawableRight="@drawable/ico_dropdown"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="@string/specifications"
            android:textColor="@color/kViewztblack" />
    </LinearLayout>
</LinearLayout>